--- a/11mbootstrap/assets/css/styleb.css
+++ b/11mbootstrap/assets/css/styleb.css
@@ -63,17 +63,14 @@
 
 .nosotros_titulo{
   text-align: center;
+  color: #ba1010;
 }
-.nosotrost{
-  display:flex;
+.imgfoto{
+  display: flex;
   justify-content: center;
   align-items: center;
 }
-.nosotros__con p{
-  text-align: center;
-  color: #fff;
-  width: 100%;
-}
+
 
 
 
