--- a/11mbootstrap/assets/css/styleb.css
+++ b/11mbootstrap/assets/css/styleb.css
@@ -11,11 +11,34 @@
   width: 100%;
 }
 
+.menu{
+  color: #fff;
+}
+
+.menu:hover{
+  color:#797575;
+  font-weight: bold;
+  border-bottom: 5px solid #fff;
+}
+
+.menu:active{
+  color:#797575;
+  font-weight: bold;
+  border-bottom: 5px solid #fff;
+}
+
 .btn_nosotros_a{
   text-decoration: none;
   color: #ba1010;
   font-weight: bold;
 }
+
+.btn_nosotros_a:hover{
+  color:#797575;
+  font-size: 1.1rem;
+  
+}
+
 .slogan{
   padding:25px;
 }
@@ -31,9 +54,7 @@
   padding-bottom: 10px;
 }
 
-.menu{
-  color: #fff;
-}
+
 
 
 .caja_mm{
@@ -45,15 +66,26 @@
 
 .bi-search, .bi-facebook, .bi-linkedin, .bi-youtube {
   font-size: 1.5rem;
+  color:#fff;
+}
+
+
+.iredes:hover{
+  color:#797575;
 }
 
 .parrafo, .slogan_t {
   text-align: center;
 }
 
-.footer_redes i{
+.iredesf{
   font-size: 3rem;
   padding: 1.5rem;
+  color: #fff;
+}
+
+.iredesf:hover{
+  color: #797575;
 }
 
 .productos, .nosotros{
@@ -70,6 +102,7 @@
   justify-content: center;
   align-items: center;
 }
+
 
 
 
